New API Calls for Staff Module to address performance issues
